--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LGBTQ+</title>
+	<title>LGBTQ+ Pride</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,21 +19,20 @@
 		left: 27vw;
 		white-space: nowrap;
 
+		height: 100%;
+
 		display: flex;
 		align-items: center;
 	}
 
-	.letter-box {
+	.letter {
+		font-family: sans-serif;
+		font-size: 55vh;
 		text-align: center;
 	}
 
-	.letter {
-		font-family: sans-serif;
-		font-size: 85vh;
-	}
-
 	.title {
-		font-size: 20vh;
+		font-size: 5vh;
 	}
 
 	#flag {
