--- a/index.html
+++ b/index.html
@@ -25,15 +25,26 @@
 		align-items: center;
 	}
 
+	.letter-box {
+		width: 40vw;
+		height: 100%;
+
+		display: flex;
+		align-items: center;
+	}
+
 	.letter {
 		font-family: sans-serif;
-		font-size: 65vh;
+		font-size: 85vh;
 		text-align: center;
 		height: 100%;
 	}
 
-	.title {
-		font-size: 5vh;
+	.contents {
+		width: 80%;
+		height: 60%;
+		margin: 0 auto;
+		background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(220, 220, 220))
 	}
 
 	#flag {
@@ -115,35 +126,18 @@
 		$(function(){
 			$(".slice").each(function() {
 				$(this).css({left: -(Math.random()+1)/2*600+"px"});
-				$(this).animate({left: "0px"}, 500+Math.random()*1800);
-			});
-
-			$(window).resize(function(){
-				$(".letter-box").each(function() {
-					$(this).width("auto");
-					$(this).height("auto");
-					$(this).width($(this).width()*1.1);
-					$(this).height($(this).height());
-				});
+				$(this).animate({left: "0px"}, 600+Math.random()*1800);
 			});
 
 			$(".letter-box").each(function() {
-				$(this).width("auto");
-				$(this).height("auto");
-				$(this).width($(this).width()*1.1);
-				$(this).height($(this).height());
-
 				$(this).click(function() {
 					var contents = $("<div>");
-					contents.height($(this).width());
-					contents.height($(this).height()*0.4);
+					contents.addClass("contents");
+
 					contents.append($("<h1>Hello, world!</h1>"));
 
 					$(this).html("");
 					$(this).append(contents);
-
-					$(this).width("auto");
-					$(this).height("auto");
 				});
 			});
 
