--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	}
 
 	.letter-box {
-		width: 40vw;
+		width: 65vh;
 		height: 100%;
 
 		display: flex;
@@ -44,7 +44,15 @@
 		width: 80%;
 		height: 60%;
 		margin: 0 auto;
-		background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(220, 220, 220))
+		background-image: linear-gradient(rgb(250, 250, 250), rgb(220, 220, 220));
+		border-radius: 30px;
+	}
+
+	.title {
+		font-family: sans-serif;
+		font-size: 3vh;
+		margin-left: 10%;
+		margin-top: 10%;
 	}
 
 	#flag {
@@ -131,10 +139,9 @@
 
 			$(".letter-box").each(function() {
 				$(this).click(function() {
-					var contents = $("<div>");
-					contents.addClass("contents");
+					var contents = $("<div>").addClass("contents");
 
-					contents.append($("<h1>Hello, world!</h1>"));
+					contents.append($("<div>Hello, world!</div>").addClass("title"));
 
 					$(this).html("");
 					$(this).append(contents);
