--- a/index.html
+++ b/index.html
@@ -3,177 +3,15 @@
 <head>
 	<title>LGBTQ+ Pride</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-	<style>
-	body {
-		margin: 0px;
-		padding: 0px;
-
-		display: table;
-	}
-
-	#acronym {
-		position: absolute;
-		left: 27vw;
-		white-space: nowrap;
-
-		height: 100%;
-
-		display: flex;
-		align-items: center;
-	}
-
-	.letter-box {
-		width: 65vh;
-		height: 100%;
-
-		display: flex;
-		align-items: center;
-	}
-
-	.letter {
-		margin: auto;
-		font-family: sans-serif;
-		font-size: 85vh;
-		text-align: center;
-		height: 100%;
-	}
-
-	.contents {
-		width: 65%;
-		height: 55%;
-		margin: 0 auto;
-		background-image: linear-gradient(rgb(250, 250, 250), rgb(220, 220, 220));
-		border-radius: 30px;
-		padding: 10%;
-	}
-
-	.title {
-		font-family: sans-serif;
-		font-weight: bold;
-		font-size: 3vh;
-	}
-
-	.description {
-		margin-top: 8px;
-		font-family: sans-serif;
-		white-space: pre-wrap;
-		word-wrap: break-word;
-	}
-
-	#flag {
-		position: fixed;
-		top: 50%;
-		transform: perspective(1px) translateY(-50%);
-
-		z-index: 2;
-	}
-
-	.slice {
-		margin-top: 0px;
-		padding: 0px;
-
-		width: 20vw;
-		height: calc(85vh/6);
-
-		position: relative;
-		left: -20vw;
-	}
-
-	#red {
-		background-color: #E70000;
-		animation: red-slide 2s;
-	}
-
-	#orange {
-		background-color: #FF8C00;
-	}
-
-	#yellow {
-		background-color: #FFEF00;
-	}
-
-	#green {
-		background-color: #00811F;
-	}
-
-	#blue {
-		background-color: #0044FF;
-	}
-
-	#purple {
-		background-color: #760089;
-	}
-</style>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.transit.min.js"></script>
+	<script type="text/javascript" src="horizontalscroll.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<div id="flag">
-		<div id="red" class="slice"></div>
-		<div id="orange" class="slice"></div>
-		<div id="yellow" class="slice"></div>
-		<div id="green" class="slice"></div>
-		<div id="blue" class="slice"></div>
-		<div id="purple" class="slice"></div>
-	</div>
-
-	<div id="acronym">
-		<div class="letter-box"><div class="letter">L</div></div>
-		<div class="letter-box"><div class="letter">G</div></div>
-		<div class="letter-box"><div class="letter">B</div></div>
-		<div class="letter-box"><div class="letter">T</div></div>
-		<div class="letter-box"><div class="letter">T</div></div>
-		<div class="letter-box"><div class="letter">2</div></div>
-		<div class="letter-box"><div class="letter">Q</div></div>
-		<div class="letter-box"><div class="letter">Q</div></div>
-		<div class="letter-box"><div class="letter">I</div></div>
-		<div class="letter-box"><div class="letter">A</div></div>
-		<div class="letter-box"><div class="letter">A</div></div>
-		<div class="letter-box"><div class="letter">P</div></div>
-		<div class="letter-box"><div class="letter">A</div></div>
-		<div class="letter-box"><div class="letter">G</div></div>
-		<div class="letter-box"><div class="letter">B</div></div>
-		<div class="letter-box"><div class="letter">G</div></div>
-		<div class="letter-box"><div class="letter">P</div></div>
-	</div>
-
-	<script>
-		$(function(){
-			$.getJSON("descriptions.json", function(data) {
-				$(".letter-box").each(function(i) {
-					$(this).click(function() {
-						var contents = $("<div>").addClass("contents");
-
-						contents.append($("<div>").html(data.order[i]["meaning"]).addClass("title"));
-
-						contents.append($("<div>").html(data.order[i]["description"]).addClass("description"));
-
-						$(this).html("");
-						$(this).append(contents);
-					});
-				});
-			});
-
-			$(".slice").each(function() {
-				$(this).delay(Math.random()*1000).animate({left: "0px"}, 600+Math.random()*1800);
-			});
-
-			function scrollHorizontally(event) {
-				event = window.event || event;
-				var delta = Math.max(-1, Math.min(1, (event.wheelDelta || -event.detail)));
-				document.documentElement.scrollLeft+= (delta*80);
-				document.body.scrollLeft+= (delta*80);
-				event.preventDefault();
-			}
-
-			if (window.addEventListener) {
-				window.addEventListener("mousewheel", scrollHorizontally, false);
-				window.addEventListener("DOMMouseScroll", scrollHorizontally, false);
-			} else {
-				window.attachEvent("onmousewheel", scrollHorizontally);
-			}
-		});
-	</script>
+	<div id="flag"></div>
+	<div id="acronym"></div>
 </body>
 </html>
