--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<title>LGBTQ+ Pride</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.transit.min.js"></script>
-	<script type="text/javascript" src="horizontalscroll.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="javascript/jquery.transit.min.js"></script>
+	<script type="text/javascript" src="javascript/horizontalscroll.js"></script>
+	<script type="text/javascript" src="javascript/script.js"></script>
 </head>
 <body>
 	<div id="flag"></div>
