Added an interactive tutorial to the webpage

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <body>
 	<div id="flag"></div>
 	<div id="acronym"></div>
+
+	<div id="bubble1" class="speech-bubble"></div>
+	<div id="bubble2" class="speech-bubble"></div>
 </body>
 </html>
