Trying to fix this 'broken' project

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="javascript/jquery.transit.min.js"></script>
-	<script type="text/javascript" src="javascript/horizontalscroll.js"></script>
-	<script type="text/javascript" src="javascript/script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.min.js"></script>
+	<script type="text/javascript" src="js/jquery.transit.min.js"></script>
+	<script type="text/javascript" src="js/horizontalscroll.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	<div id="flag"></div>
+	<div id="align-flag">
+		<div id="flag"></div>
+	</div>
+	
 	<div id="acronym"></div>
 
 	<div id="bubble1" class="speech-bubble"></div>
